Bug 489234 - Replace new Integer(int) with Integer.valueOf()
org.eclipse.ui.workbench

Change-Id: Id81d1b4b29a2d34864b47a5ca6cca5170c592925
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>