@@ -91,7 +91,7 @@ public class PartTester {
 
         // Test equals
 		Assert.isTrue(part.equals(part), "A part must be equal to itself"); //$NON-NLS-1$
-		Assert.isTrue(!part.equals(new Integer(32)),
+		Assert.isTrue(!part.equals(Integer.valueOf(32)),
 				"A part must have a meaningful equals method"); //$NON-NLS-1$
 
         // Test getAdapter
