@@ -148,7 +148,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		setButtonLayoutData(button);
 
-		button.setData(new Integer(id));
+		button.setData(Integer.valueOf(id));
 		button.setText(label);
 
 		if (defaultButton) {
@@ -366,7 +366,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		selectAllButton = new Button(buttonComposite, SWT.PUSH);
 		selectAllButton.setText(PreferencesMessages.SelectionDialog_selectLabel);
-		selectAllButton.setData(new Integer(IDialogConstants.SELECT_ALL_ID));
+		selectAllButton.setData(Integer.valueOf(IDialogConstants.SELECT_ALL_ID));
 		setButtonLayoutData(selectAllButton);
 
 		SelectionListener listener = new SelectionAdapter() {
@@ -381,7 +381,7 @@ public abstract class WizardPreferencesPage extends WizardPage implements
 
 		deselectAllButton = new Button(buttonComposite, SWT.PUSH);
 		deselectAllButton.setText(PreferencesMessages.SelectionDialog_deselectLabel);
-		deselectAllButton.setData(new Integer(IDialogConstants.DESELECT_ALL_ID));
+		deselectAllButton.setData(Integer.valueOf(IDialogConstants.DESELECT_ALL_ID));
 		setButtonLayoutData(deselectAllButton);
 
 		listener = new SelectionAdapter() {
